fix for scrolling issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,9 @@ body, html {
 
 body {
     background: linear-gradient(45deg, #434343 0%, #434343 5%,transparent 5%, transparent 10%, #434343 10%, #434343 15%,transparent 15%,transparent 20%, #434343 20%, #434343 25%,transparent 25%,transparent 30%, #434343 30%, #434343 35%,transparent 35%,transparent 40%, #434343 40%, #434343 45%,transparent 45%,transparent 50%, #434343 50%, #434343 55%,transparent 55%,transparent 60%, #434343 60%, #434343 65%,transparent 65%,transparent 70%, #434343 70%, #434343 75%,transparent 70%,transparent 80%, #434343 80%, #434343 85%,transparent 85%,transparent 90%, #434343 90%, #434343 95%,transparent 95%), linear-gradient(135deg, #434343 0%, #434343 5%,transparent 5%, transparent 10%, #434343 10%, #434343 15%,transparent 15%,transparent 20%, #434343 20%, #434343 25%,transparent 25%,transparent 30%, #434343 30%, #434343 35%,transparent 35%,transparent 40%, #434343 40%, #434343 45%,transparent 45%,transparent 50%, #434343 50%, #434343 55%,transparent 55%,transparent 60%, #434343 60%, #434343 65%,transparent 65%,transparent 70%, #434343 70%, #434343 75%,transparent 70%,transparent 80%, #434343 80%, #434343 85%,transparent 85%,transparent 90%, #434343 90%, #434343 95%,transparent 95%);
-        background-size: 3em 3em;
-        background-color: #494949;
-        opacity: 1
+    background-size: 3em 3em;
+    background-color: #494949;
+    opacity: 1
 }
 
 .page {
@@ -131,7 +131,7 @@ body {
         font-size: 12px;
         width: 100%;
         margin: 0;
-        overflow: hidden;
+        
         
       } .page {
           width: 100%;
@@ -147,7 +147,7 @@ body {
       font-size: 12px;
       width: 100%;
       margin: 0;
-      overflow: hidden;
+      
       
     } .page {
         width: 100%;
